2005-07-12  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_meta.m4: Added _X_AC_META_GETVAL to parse META file.

2005-07-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Fixed 'start' behavior under RedHat so daemon is
	  not started if it is already running (Thanx to Christopher Holmes).

	* Makefile.am, config/Make-rpm.mk: Removed deprecated Make-rpm.

2005-07-06  Chris Dunlap  <cdunlap@llnl.gov>

	* META: Tweaked formatting.  Replaced Package with Name.
	* src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/libmunge/munge_ctx.3.in, src/libmunge/munge_enum.3.in,
	  src/munge/munge.1.in, src/munge/remunge.1.in,
	  src/munge/unmunge.1.in, src/munged/munged.8.in:
	  Updated copyright.  Added META_DATE and META_ALIAS.
	* src/munge/munge.c, src/munge/remunge.c, src/munge/unmunge.c,
	  src/munged/conf.c, src/munged/munged.c: Invoked display_version().
	* src/libcommon/version.c, src/libcommon/version.h,
	  src/libcommon/Makefile.am: Added.  Created display_version().
	* src/libcommon/license.c, src/libcommon/license.h: Updated copyright.
	* src/libmunge/Makefile.am: Prefixed meta LT vars with "META_".
	* config/x_ac_meta.m4: Revamped.  Prefixed meta vars with "META_".
	  Replaced PACKAGE with META_NAME.  Added META_ALIAS.

2005-06-29  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Created dynamic test for init.d & sysconfig %files.
	* munge.spec: Set void version number -- build script will rewrite it.

2005-06-01  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_check_ssl.m4: Fixed bug causing wrong ssl dir to be set.
	* : Re-bootstrap'd with updated autotools jazz.

2005-04-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with updated autotools-dev.

2005-04-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with automake-1.9.5 on Debian Sarge.

2005-02-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmissing/strlcpy.c, src/libmissing/strlcat.c:
	  Latest from <ftp://ftp.openbsd.org/pub/OpenBSD/src/lib/libc/string/>.
