@@ -1,7 +1,7 @@
   Name:         munge
   Version:      0.4.1
   Date:         2004-12-21
-  Author:       cdunlap@llnl.gov
+  Author:       Chris Dunlap <cdunlap@llnl.gov>
   LT_Current:   1
   LT_Revision:  0
   LT_Age:       0
