@@ -280,7 +280,7 @@ for each thread, either by creating a new one via \fBmunge_ctx_create()\fR
 or copying an existing one via \fBmunge_ctx_copy()\fR.
 
 .SH AUTHOR
-Chris Dunlap <cdunlap@llnl.gov>
+@META_AUTHOR@
 
 .SH COPYRIGHT
 Copyright (C) 2003-2005 The Regents of the University of California.
