@@ -99,7 +99,7 @@ On error, it prints an error message to stderr and returns a non-zero
 exit code.
 
 .SH AUTHOR
-Chris Dunlap <cdunlap@llnl.gov>
+@META_AUTHOR@
 
 .SH COPYRIGHT
 Copyright (C) 2003-2005 The Regents of the University of California.
