@@ -102,7 +102,7 @@ signifies the credential is valid.  On error, it prints an error message to
 stderr and returns a non-zero exit code.
 
 .SH AUTHOR
-Chris Dunlap <cdunlap@llnl.gov>
+@META_AUTHOR@
 
 .SH COPYRIGHT
 Copyright (C) 2003-2005 The Regents of the University of California.
